Added more notes to the config file.  Updated cleanup logic to fix bugs, and improved error checking and handling.  Also verified log files are writable after verifying they exist.

--- a/servers/benolinas/scripts/naspool_zfs_backup/zfs_backup_settings.conf
+++ b/servers/benolinas/scripts/naspool_zfs_backup/zfs_backup_settings.conf
@@ -6,6 +6,8 @@
 IS_TEST_STRING="true" # Safety flag for running just a test without impacting the ZFS pools
 
 # Source pool (replace with your primary pool name) - this is the one that will get a snapshot taken and sent to the backup pool
+# Note: The BACKUP_POOL will be determined by what backup pool is active at the time of running the script; it will be searched via $(zpool list -H -o name | grep -m1 "naspool_backup")
+#	If multiple backup pools are active, only the first one found will be chosen to receive the snapshot from the SOURCE_POOL
 SOURCE_POOL="naspool"
 
 # Source and backup pools (space-separated list) - # List all pools including those in backup rotation
