Added Log File trimming functionality and standardized dates in logs to use ISO 8601 format, with confi setting to change as needed.

--- a/servers/benolinas/scripts/naspool_zfs_backup/zfs_backup_settings.conf
+++ b/servers/benolinas/scripts/naspool_zfs_backup/zfs_backup_settings.conf
@@ -25,7 +25,8 @@ SOURCE_POOL_SIZE_WARNING_THRESHOLD=500
 BACKUP_POOL_CRITICAL_THRESHOLD=100  
 SOURCE_POOL_CRITICAL_THRESHOLD=100
 
-# Log file paths
+# Log file paths and settings
+LOG_DATE_FORMAT="%Y-%m-%dT%H:%M:%S%z"
 LOG_FILE="/var/log/zfs_backup.log"
 DISK_USAGE_LOG="/var/log/zfs_disk_usage.log"
 SNAPSHOT_TRANSFER_HISTORY_LOG="/var/log/zfs_snapshot_transfers.log"
@@ -33,3 +34,8 @@ SNAPSHOT_TRANSFER_HISTORY_LOG="/var/log/zfs_snapshot_transfers.log"
 # Make sure the Discord webhook is created and the path etc. is stored here:
 # Formate of Webhook: https://discord.com/api/webhooks/[WEBHOOK_ID]/[UNIQUE_CODE]
 # [RELATIVE TO zfs_backup.sh SCRIPT DIRECTORY]/secrets/.zfs_backups_discord_webhook"
+
+# Keep the last N number of lines in the log files to manage the log file sizes.  
+LOG_FILE_LINES_TO_KEEP=10000
+# Note: If SKIP_LOG_FILE_MAINTENANCE is true, no lines will be trimmed and logs will continue to grow
+SKIP_LOG_FILE_MAINTENANCE="false"
