--- a/servers/benolilab/vmdocker/docker-compose/immich/docker-compose.yml
+++ b/servers/benolilab/vmdocker/docker-compose/immich/docker-compose.yml
@@ -41,7 +41,9 @@ services:
             interval: 15s
             timeout: 45s
             retries: 10
-
+        labels:
+            description: "Immich is a self-hosted photo and video backup solution, using Docker containers."
+            # com.centurylinklabs.watchtower.enable: "true"
     immich-machine-learning:
         container_name: immich-machine-learning
         # For hardware acceleration, add one of -[armnn, cuda, rocm, openvino, rknn] to the image tag.
@@ -63,20 +65,26 @@ services:
             interval: 10s
             timeout: 5s
             retries: 5
-
+        labels:
+            description: "Immich leverages machine learning (ML) for features like facial recognition and smart search, using a separate machine learning service within its Docker environment."
+            # com.centurylinklabs.watchtower.enable: "true"
     immich-redis:
         container_name: immich-redis
         image: docker.io/valkey/valkey:8-bookworm@sha256:ff21bc0f8194dc9c105b769aeabf9585fea6a8ed649c0781caeac5cb3c247884
         networks:
             server_net:
                 ipv4_address: 172.18.0.22
+        volumes:
+            - immich_redis_data:/data
         healthcheck:
             test: ["CMD-SHELL", "redis-cli -h localhost ping || exit 1"]
             interval: 10s
             timeout: 5s
             retries: 5
         restart: always
-
+        labels:
+            description: "In Immich, Redis is used as an external service for caching and managing background tasks."
+            # com.centurylinklabs.watchtower.enable: "true"
     immich-database:
         container_name: immich-database
         image: ghcr.io/immich-app/postgres:14-vectorchord0.3.0-pgvectors0.2.0@sha256:fa4f6e0971f454cd95fec5a9aaed2ed93d8f46725cc6bc61e0698e97dba96da1
@@ -103,11 +111,16 @@ services:
           interval: 10s
           timeout: 5s
           retries: 5
+        labels:
+            description: "Immich Database relies on PostgreSQL and is used to store the image references and metadata for Immich Server."
+            # com.centurylinklabs.watchtower.enable: "true"
 volumes:
     immich_model_cache:
         name: immich_model_cache
     immich_pgdata:
         name: immich_pgdata
+    immich_redis_data:
+        name: immich_redis_data
 networks:
     server_net:
         name: server_net
