--- a/servers/benolilab/vmdocker/docker-compose/immich/docker-compose.yml
+++ b/servers/benolilab/vmdocker/docker-compose/immich/docker-compose.yml
@@ -43,6 +43,7 @@ services:
             retries: 10
         labels:
             description: "Immich is a self-hosted photo and video backup solution, using Docker containers."
+            com.docker.backup.restart-policy: always
             # com.centurylinklabs.watchtower.enable: "true"
     immich-machine-learning:
         container_name: immich-machine-learning
@@ -67,6 +68,7 @@ services:
             retries: 5
         labels:
             description: "Immich leverages machine learning (ML) for features like facial recognition and smart search, using a separate machine learning service within its Docker environment."
+            com.docker.backup.restart-policy: always
             # com.centurylinklabs.watchtower.enable: "true"
     immich-redis:
         container_name: immich-redis
@@ -84,6 +86,7 @@ services:
         restart: always
         labels:
             description: "In Immich, Redis is used as an external service for caching and managing background tasks."
+            com.docker.backup.restart-policy: always
             # com.centurylinklabs.watchtower.enable: "true"
     immich-database:
         container_name: immich-database
@@ -113,6 +116,7 @@ services:
           retries: 5
         labels:
             description: "Immich Database relies on PostgreSQL and is used to store the image references and metadata for Immich Server."
+            com.docker.backup.restart-policy: always
             # com.centurylinklabs.watchtower.enable: "true"
 volumes:
     immich_model_cache:
