Volume Backup Wrapper - Made adjustments to heatbeat so that it's not so noisy and now updates the heartbeat log daily instead of every minute.  Added an initial heartbeat at the entrypoint to signal good health.  Made several other adjustments and updated to run in "live" mode. Cleaned up crontab file and simplified.  Added timezone support to the container and added tini to help with process reaping (to prevent zombie processes).

--- a/servers/benolilab/vmdocker/docker-compose/monitorance/backup.env
+++ b/servers/benolilab/vmdocker/docker-compose/monitorance/backup.env
@@ -25,7 +25,12 @@ QUIET_PERIOD=60
 QUIET_TIMEOUT=300
 QUIET_LOG_PATTERN=upload
 
-# Schedule (for logging or external runners) - uses Cron
+# Time zone setting - choose from list here: https://en.wikipedia.org/wiki/List_of_tz_database_time_zones#List
+TZ=Etc/UTC
+
+# Schedule (for logging or external runners)
+# supercronic (installed in wrapper docker container) supports runs per second (not recommended) or minute- e.g. * * * * * runs every minute, or */5 * * * * runs every 5 minutes, */5 * * * * * * runs every 5 seconds (again, not recommended unless you're debugging)
+# The subsequent * characters represent the minutes, hours, day of the month, month, and day of the week, indicating that the command should run regardless of these values.
 BACKUP_SCHEDULE=0 3 * * *
 
 # Backup config - these get passed to the offen volume backup service
